// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-Button23456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <button
    className="ant-btn"
    id="Button23456"
    onClick={[Function]}
    type="button"
  >
    <span>
      Button23456
    </span>
  </button>
</div>
`;

exports[`Disabled Col 1`] = `
<div
  className="{}"
  id="bl-Disabled Col23456"
>
  <input
    className="ant-input"
    id="Disabled Col23456"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Input 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-Input23456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <input
    className="ant-input"
    id="Input23456"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Input 2`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-4"
  id="bl-Input23456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <input
    className="ant-input"
    id="Input23456"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Paragraph span: 12 1`] = `
<div
  className="ant-col {} ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
  id="bl-Paragraph span: 1223456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <div
    id="Paragraph span: 1223456"
  >
    Loem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</div>
`;

exports[`Paragraph style 1`] = `
<div
  className="ant-col {\\"style\\":{\\"background\\":\\"white\\",\\"borderRadius\\":20}} ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
  id="bl-Paragraph style23456"
  style={
    Object {
      "alignSelf": undefined,
      "border": "1px dashed #8eccf5",
    }
  }
>
  <div
    id="Paragraph style23456"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </div>
</div>
`;
